trying to fix clipping

--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -20,8 +20,8 @@
   top: 40%;
   left: 50%;
   margin: 0 auto;
-  -webkit-transform: translate(-50%, -100%);
-  transform: translate(-50%, -100%);
+  -webkit-transform: translate(-50%, 0%);
+  transform: translate(-50%, 0%);
 
   width: 90%;
   max-width: 750px;
